@@ -1,3 +1,7 @@
+Tue Jan 10 23:24:55 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* include/stdlib.h (realloc): Drop malloc attribute.
+
 Fri Dec 30 02:25:34 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* Makefile.am (stdio/fpos.c): Remove.
